src/objects/LVR_Rate__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>ACF_Comparison_Rate__c</fullName>
        <description>Click Loans</description>
        <label>Comparison Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Investment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_occupied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner occupied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfAnnual_Fees__c</fullName>
        <description>Click Loans</description>
        <label>Annual Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfApplication_Fee__c</fullName>
        <description>Click Loans</description>
        <label>Application Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfEstablishment_Fee__c</fullName>
        <description>Click Loans</description>
        <label>Establishment Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfLVR__c</fullName>
        <description>Click Loans</description>
        <label>LVR To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>acfLegal_Fees__c</fullName>
        <description>Click Loans</description>
        <label>Legal Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfLoan_Size__c</fullName>
        <description>Click Loans</description>
        <label>Loan Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfMonthly_Fees__c</fullName>
        <description>Click Loans</description>
        <label>Monthly Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfMortgage_Risk_Fee__c</fullName>
        <description>Click Loans</description>
        <label>Mortgage Risk Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>acfOngoing_Fees_annual__c</fullName>
        <description>Click Loans</description>
        <formula>acfAnnual_Fees__c +  (acfMonthly_Fees__c * 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ongoing Fees (annual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfOwner_Occupied_only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Owner Occupied only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>LVR_Rate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfPurchase_only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Purchase only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfRate__c</fullName>
        <description>Click Loans</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>acfTerm_in_Years__c</fullName>
        <description>Click Loans</description>
        <formula>If(acfProduct__r.RecordType.Name == &apos;Fixed&apos;,VALUE(Text(acfProduct__r.acfTenure_in_Years__c)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term(in Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acfTitle_Protection_Fee__c</fullName>
        <description>Click Loans</description>
        <label>Title Protection Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfTotal_Fee__c</fullName>
        <description>Click Loans</description>
        <formula>acfApplication_Fee__c +  acfValuation_Fee__c + acfLegal_Fees__c +  acfMonthly_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Upfront Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfValuation_Fee__c</fullName>
        <description>Click Loans</description>
        <label>Valuation Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clickFixed_Interest_Rate__c</fullName>
        <label>Fixed Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>clickLVR_From__c</fullName>
        <label>LVR From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>clickLoan_Size_From__c</fullName>
        <label>Loan Size From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lendi_lvr_uuid__c</fullName>
        <externalId>true</externalId>
        <label>Lendi lvr uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_uniqueId__c</fullName>
        <label>merc uniqueId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Click Loans LVR &amp; Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>acfProduct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>clickFixed_Interest_Rate__c</columns>
        <columns>acfLoan_Size__c</columns>
        <columns>clickLoan_Size_From__c</columns>
        <columns>clickLVR_From__c</columns>
        <columns>acfLVR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Fixed</fullName>
        <columns>NAME</columns>
        <columns>acfProduct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>clickFixed_Interest_Rate__c</columns>
        <columns>acfLoan_Size__c</columns>
        <columns>clickLoan_Size_From__c</columns>
        <columns>clickLVR_From__c</columns>
        <columns>acfLVR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clickFixed_Interest_Rate__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>acfProduct__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Fixed</label>
    </listViews>
    <listViews>
        <fullName>All_Variable</fullName>
        <columns>NAME</columns>
        <columns>acfProduct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>clickFixed_Interest_Rate__c</columns>
        <columns>acfLoan_Size__c</columns>
        <columns>clickLoan_Size_From__c</columns>
        <columns>clickLVR_From__c</columns>
        <columns>acfLVR__c</columns>
        <columns>acfTerm_in_Years__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clickFixed_Interest_Rate__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>acfProduct__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Variable</label>
    </listViews>
    <listViews>
        <fullName>All_Variable_TODAY</fullName>
        <columns>NAME</columns>
        <columns>acfProduct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>clickFixed_Interest_Rate__c</columns>
        <columns>acfLoan_Size__c</columns>
        <columns>clickLoan_Size_From__c</columns>
        <columns>clickLVR_From__c</columns>
        <columns>acfLVR__c</columns>
        <columns>acfTerm_in_Years__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clickFixed_Interest_Rate__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>acfProduct__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Variable TODAY</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LVR &amp; Rate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Fixed_Loan_Interest_Rate_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>If(AND(acfProduct__r.RecordType.Name = &apos;Fixed&apos;,ISBLANK( clickFixed_Interest_Rate__c)),true,false)</errorConditionFormula>
        <errorDisplayField>clickFixed_Interest_Rate__c</errorDisplayField>
        <errorMessage>Please enter value</errorMessage>
    </validationRules>
</CustomObject>